--- a/raccolta.html
+++ b/raccolta.html
@@ -433,7 +433,7 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_infobib" target="_blank" rel="noopener noreferrer" class="hover:underline">
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#altri-orari-pb" target="_blank" rel="noopener noreferrer" class="hover:underline">
   Sabato 09:00-13:00
 </a>
 
