--- a/raccolta.html
+++ b/raccolta.html
@@ -433,7 +433,11 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#pagecentercontent" target="_blank" rel="noopener noreferrer" class="hover:underline">
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#" 
+   onclick="document.getElementById('where_openings').scrollIntoView({behavior: 'smooth', block: 'center'}); return false;" 
+   target="_blank" 
+   rel="noopener noreferrer" 
+   class="hover:underline">
   Sabato 09:00-13:00
 </a>
 
