--- a/raccolta.html
+++ b/raccolta.html
@@ -433,10 +433,9 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#" 
-   onclick="document.getElementById('where_openings').scrollIntoView({behavior: 'smooth', block: 'center'}); return false;" 
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
+   onclick="event.preventDefault(); setTimeout(() => document.querySelector('summary').scrollIntoView({behavior: 'smooth'}), 100);" 
    target="_blank" 
-   rel="noopener noreferrer" 
    class="hover:underline">
   Sabato 09:00-13:00
 </a>
