--- a/raccolta.html
+++ b/raccolta.html
@@ -433,10 +433,7 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
-   onclick="event.preventDefault(); setTimeout(() => document.querySelector('summary').scrollIntoView({behavior: 'smooth'}), 100);" 
-   target="_blank" 
-   class="hover:underline">
+<a hre<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#h3:nth-of-type(3)" target="_blank" class="hover:underline">
   Sabato 09:00-13:00
 </a>
 
