--- a/raccolta.html
+++ b/raccolta.html
@@ -433,7 +433,7 @@
 
 
 
-<a hre<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#h3:nth-of-type(3)" target="_blank" class="hover:underline">
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_facebook" target="_blank" class="hover:underline">
   Sabato 09:00-13:00
 </a>
 
