--- a/raccolta.html
+++ b/raccolta.html
@@ -433,8 +433,12 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_facebook" target="_blank" class="hover:underline">
-  Sabato 09:00-13:00
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   onclick="setTimeout(function() { window.location.href = this.href; }, 100); return false;"
+   class="hover:underline">
+   Sabato 09:00-13:00
 </a>
 
 
