--- a/raccolta.html
+++ b/raccolta.html
@@ -433,10 +433,9 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario,09%3A00%20-%2013%3A00" 
    target="_blank" 
    rel="noopener noreferrer"
-   onclick="setTimeout(function() { window.location.href = this.href; }, 100); return false;"
    class="hover:underline">
    Sabato 09:00-13:00
 </a>
