--- a/raccolta.html
+++ b/raccolta.html
@@ -451,12 +451,13 @@
         event.preventDefault();  // Impedisce il comportamento predefinito del link
         var newWindow = window.open(this.href, '_blank');  // Apre il link in una nuova finestra
         newWindow.onload = function() {
-            // Attende che la pagina sia caricata prima di eseguire lo scroll
-            newWindow.scrollBy(0, 100); // Scorri di 100px verso il basso
+            // Dopo 1 secondo, esegui lo scroll
+            setTimeout(function() {
+                newWindow.scrollBy(0, 100); // Scorri di 100px verso il basso
+            }, 1000); // 1000 millisecondi = 1 secondo
         };
     });
 </script>
 
 </body>
 </html>
-    
