--- a/raccolta.html
+++ b/raccolta.html
@@ -407,7 +407,7 @@
 <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
         <div class="mb-4 md:mb-0">
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" target="_blank" rel="noopener noreferrer">
                 <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10">
             </a>
         </div>
@@ -450,19 +450,21 @@
     document.getElementById('scrollLink').addEventListener('click', function(event) {
         event.preventDefault();  // Impedisce il comportamento predefinito del link
 
-        // Apre il link nella stessa finestra
-        var newWindow = window.open(this.href, '_blank');
+        var link = this.href;
+        var targetPosition = 100;  // Definisci quanto vuoi scorrere, ad esempio 100px
 
-        // Aspetta che la pagina sia completamente caricata
+        // Apre il link in una nuova finestra
+        var newWindow = window.open(link, '_blank');
+
+        // Aspetta che la pagina si carichi completamente
         newWindow.onload = function() {
             setTimeout(function() {
-                // Scorri di 100px verso il basso
-                newWindow.scrollBy(0, 100); 
-            }, 2000);  // Aumento del ritardo a 2 secondi per garantire che la pagina sia stabilizzata
+                // Scorri la pagina di un certo numero di pixel (100px in questo caso)
+                newWindow.scrollTo(0, targetPosition);
+            }, 1000);  // 1 secondo di ritardo
         };
     });
 </script>
 
 </body>
 </html>
-
