--- a/raccolta.html
+++ b/raccolta.html
@@ -432,12 +432,12 @@
                        <span>
 
                            
-                            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
+ <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
   target="_blank" 
-  rel="noopener noreferrer"
-  class="hover:underline"
   onclick="setTimeout(function() {
-    window.scrollBy(0, 200);
+    const section = document.getElementById('where_openings');
+    section.scrollIntoView({behavior: 'smooth'});
+    return false;
   }, 1000);">
   Sabato 09:00-13:00
 </a>
