--- a/raccolta.html
+++ b/raccolta.html
@@ -432,16 +432,16 @@
                        <span>
 
                            
- <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
-  target="_blank" 
-  onclick="setTimeout(function() {
-    const section = document.getElementById('where_openings');
-    section.scrollIntoView({behavior: 'smooth'});
-    return false;
-  }, 1000);">
+ <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+  target="_blank"
+  onclick="window.addEventListener('load', function() {
+    window.scrollTo({
+      top: 800,
+      behavior: 'smooth'
+    });
+  });">
   Sabato 09:00-13:00
 </a>
-
 
 
                            
