--- a/raccolta.html
+++ b/raccolta.html
@@ -434,16 +434,13 @@
                            
 <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
   target="_blank"
-  onclick="setTimeout(function() {
-    const newWindow = window.open(this.href, '_blank');
-    newWindow.addEventListener('load', function() {
-      newWindow.scrollTo({
-        top: 800,
-        behavior: 'smooth'
-      });
-    });
-    return false;
-  }, 100);">
+  onclick="let win = window.open(this.href, '_blank'); 
+           win.onload = function() {
+               setTimeout(function() {
+                   win.scrollTo(0, 800);
+               }, 1000);
+           }; 
+           return false;">
   Sabato 09:00-13:00
 </a>
 
