--- a/raccolta.html
+++ b/raccolta.html
@@ -432,16 +432,9 @@
                        <span>
 
                            
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-  target="_blank"
-  onclick="let win = window.open(this.href, '_blank'); 
-           win.onload = function() {
-               setTimeout(function() {
-                   win.scrollTo(0, 800);
-               }, 1000);
-           }; 
-           return false;">
-  Sabato 09:00-13:00
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?scrollTo=openings" 
+   target="_blank">
+   Sabato 09:00-13:00
 </a>
 
 
