--- a/raccolta.html
+++ b/raccolta.html
@@ -432,10 +432,7 @@
                        <span>
 
                            
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?scrollTo=openings" 
-   target="_blank">
-   Sabato 09:00-13:00
-</a>
+<a href="#" onclick="A.a13m11('RMBO2',RENDERING.rBody);return false;">Altri orari</a>
 
 
                            
