--- a/raccolta.html
+++ b/raccolta.html
@@ -432,14 +432,10 @@
                        <span>
 
                            
-// Esegui lo scroll se il parametro URL "scrollTo" è presente
-window.onload = function() {
-    const urlParams = new URLSearchParams(window.location.search);
-    const scrollTo = urlParams.get('scrollTo');
-    if (scrollTo && document.getElementById(scrollTo)) {
-        document.getElementById(scrollTo).scrollIntoView({ behavior: 'smooth' });
-    }
-};
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?scrollTo=where_openings" target="_blank">
+    Sabato 09:00-13:00
+</a>
+
 
 
                            
