--- a/raccolta.html
+++ b/raccolta.html
@@ -432,9 +432,7 @@
                        <span>
 
                            
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?scrollTo=where_openings" target="_blank">
-    Sabato 09:00-13:00
-</a>
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_infobib">Sabato 09:00-13:00</a>
 
 
 
