--- a/raccolta.html
+++ b/raccolta.html
@@ -432,8 +432,7 @@
                        <span>
 
                            
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?state=openings">Sabato 09:00-13:00</a>
-
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2?view=hours">Sabato 09:00-13:00</a>
 
                            
                         </span>
