--- a/raccolta.html
+++ b/raccolta.html
@@ -443,20 +443,21 @@
 <script>
 document.getElementById('scrollToOrari').addEventListener('click', function(event) {
     event.preventDefault();
-    var win = window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings', '_blank');
+    var win = window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_infobib', '_blank');
     
     setTimeout(function() {
         if (win && win.document) {
-            var element = win.document.getElementById('where_openings');
+            var element = win.document.getElementById('where_infobib');
             if (element) {
                 var targetPosition = element.getBoundingClientRect().top + win.pageYOffset;
                 var lastPosition = -1;
                 var checkCounter = 0;
                 var maxAttempts = 20; // Massimo numero di tentativi
+                var tolerance = 10; // Tolleranza in pixel per lo scorrimento
 
                 function scrollAndCheck() {
                     var currentPosition = win.pageYOffset;
-                    if (Math.abs(currentPosition - targetPosition) > 10) { // Se la differenza è significativa
+                    if (Math.abs(currentPosition - targetPosition) > tolerance) { // Se la differenza è significativa
                         win.scrollTo({
                             top: targetPosition,
                             behavior: 'smooth'
