--- a/index.html
+++ b/index.html
@@ -420,9 +420,10 @@ footer i {
 <body>
     <div class="top-banner">
 	    
-          <a href="https://culture.roma.it/">
-         <img src="roma.png" alt="Logo Roma" class="roma-logo">
-         </a>
+          <a href="https://culture.roma.it/" target="_blank">
+    <img src="roma.png" alt="Logo Roma" class="roma-logo">
+</a>
+
 	    
         <div class="social-icons">
             <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" aria-label="Facebook">
