--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ async function validateField(input) {
 
 
         
-    window.createBookEntry = function() {
+    function createBookEntry() {
     const bookDiv = document.createElement('div');
     bookDiv.className = 'book-entry relative bg-gray-50 border border-gray-200 rounded-lg p-5 mb-5 hover:transform hover:-translate-y-1 transition-transform';
     bookCount++;
