--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
         }
 
         // Your existing email sending logic
-        const formattedBooks = books.map((book, index) => /* ... your existing books formatting ... */;
+        const formattedBooks = books.map((book, index) => /* ... your existing books formatting ... */
         
         showLoadingOverlay();
         
