--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/<!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
@@ -425,7 +425,7 @@ footer i {
 
 
         
-    </style>
+    
 
 
 
