--- a/index.html
+++ b/index.html
@@ -440,13 +440,32 @@ input[type="checkbox"]:checked::before {
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
 
-/* Updated error popup style with more vivid red */
 .error-popup {
-    @apply fixed top-4 left-1/2 transform -translate-x-1/2 px-6 py-4 rounded shadow-lg;
-    background-color: #ff3333; /* More vivid red */
+    position: fixed;
+    top: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ff0000; /* More vivid red */
     color: white;
+    padding: 1rem;
+    border-radius: 0.375rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 50;
     animation: slideDown 0.5s ease-out;
+    display: flex;
+    align-items: center;
+    max-width: calc(100% - 2rem);
+}
+
+@keyframes slideDown {
+    from {
+        transform: translate(-50%, -100%);
+        opacity: 0;
+    }
+    to {
+        transform: translate(-50%, 0);
+        opacity: 1;
+    }
 }
 	    
         
