--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ input[type="checkbox"]:checked::before {
     color: white;
     padding: 1rem;
     border-radius: 0.375rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 50;
     animation: fadeInOut 5s ease-in-out;
     display: flex;
@@ -458,23 +458,17 @@ input[type="checkbox"]:checked::before {
     white-space: nowrap;
 }
 
+/* Remove any possible pseudo-elements or additional backgrounds */
+.error-popup::before,
+.error-popup::after {
+  display: none !important;
+}
+
 @keyframes fadeInOut {
-    0% {
-        opacity: 0;
-        transform: translate(-50%, -20px);
-    }
-    5% {
-        opacity: 1;
-        transform: translate(-50%, 0);
-    }
-    95% {
-        opacity: 1;
-        transform: translate(-50%, 0);
-    }
-    100% {
-        opacity: 0;
-        transform: translate(-50%, -20px);
-    }
+  0% { opacity: 0; transform: translate(-50%, -20px); }
+  5% { opacity: 1; transform: translate(-50%, 0); }
+  95% { opacity: 1; transform: translate(-50%, 0); }
+  100% { opacity: 0; transform: translate(-50%, -20px); }
 }
     
         
@@ -1255,9 +1249,9 @@ if (!validateCheckbox(acceptCheckbox)) {
 
 if (!isValid) {
     const errorMessage = `
-        <div class="error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-500 text-white px-6 py-3 rounded shadow-lg flex items-center space-x-2 min-w-[400px] z-50" role="alert">
-  <strong class="font-bold">Ops!</strong>
-  <span class="inline-block">Per favore, compila correttamente tutti i campi obbligatori</span>
+ <div class="error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-500 text-white px-8 py-4 rounded shadow-lg flex items-center space-x-3 min-w-[500px] z-50" role="alert">
+  <strong class="font-bold text-xl">Ops!</strong>
+  <span class="inline-block text-xl">Per favore, compila correttamente tutti i campi obbligatori</span>
 </div>
     `;
     showGlobalErrorPopup(errorMessage);
